--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
 
     <!-- About section with information about the individual -->
     <section id="about">
-        <h2>About Me</h2> <!-- Heading for the About Me section -->
-        <p class="about"> <!-- Paragraph describing the individual -->
-            Hi, I'm Faraz Paikar, an aspiring IT networking and security professional with a passion for technology, cybersecurity, and artificial intelligence. Currently pursuing my degree in Networking & IT Security at Ontario Tech University, I have hands-on experience in IT forensics, system administration, and network engineering.
-            <br> <!-- Line break -->
-            With a background in network infrastructure, security protocols, and cloud technologies, I enjoy tackling complex challenges, optimizing systems for efficiency, and staying up-to-date with the latest advancements in cybersecurity. My previous roles at Scotiabank and CBC have provided me with valuable real-world experience in IT operations and security.
+        <h2>About Me</h2>
+        <p class="about">
+            Hi, I'm Faraz Paikar, a dedicated IT Networking and Security professional currently pursuing a degree in Networking & IT Security at Ontario Tech University. With a solid foundation in network infrastructure, security protocols, and programming technologies, I am passionate about leveraging my skills in technology and troubleshooting to solve complex challenges. My practical experience includes a wide range of technology with specialization in networking, programming and cybersecurity. I have previously contributed to IT operations and security roles at reputable organizations such as Scotiabank and CBC. Through these experiences, I have honed my ability to optimize systems for performance, stay ahead of emerging security trends, and provide innovative solutions in the ever-evolving tech landscape.
         </p>
     </section>
+    
 
     <!-- Work Experience section -->
     <section id="experience">
@@ -63,9 +62,11 @@
                     <p class="company-name">CBC</p> <!-- Company name -->
                     <p class="duration">Duration: 2024-2025</p> <!-- Duration of the internship -->
                     <ul> <!-- List of tasks and responsibilities -->
-                        <li>Worked alongside IT/network engineering team on network management tasks.</li>
-                        <li>Assisted with troubleshooting network issues and implementation of new solutions.</li>
-                        <li>Monitored system performance and optimized for improved efficiency.</li>
+                        <li>Collaborated with IT and network engineering teams to manage and maintain network infrastructure.</li>
+                        <br>
+                        <li>Assisted in troubleshooting network issues and implementing new solutions for system optimization.</li>
+                        <br>
+                        <li>Monitored and analyzed system performance, implementing improvements for enhanced operational efficiency.</li>
                     </ul>
                 </div>
             </div>
@@ -80,9 +81,11 @@
                     <p class="company-name">Scotiabank</p> <!-- Company name -->
                     <p class="duration">Duration: 2022-Present</p> <!-- Duration of employment -->
                     <ul> <!-- List of tasks and responsibilities -->
-                        <li>Handled customer inquiries and resolved service issues.</li>
-                        <li>Managed account problems, ensuring a high level of customer satisfaction.</li>
-                        <li>Worked efficiently to meet and exceed service expectations.</li>
+                        <li>Provide excellent customer service by promptly addressing queries, meeting client needs, and ensuring satisfaction.</li>
+                        <br>
+                        <li>Professionally manage a variety of client issues, including particular transaction inquiries, fraud concerns, and mobile/online banking inquiries.</li>
+                        <br>
+                        <li>Maintain high accuracy and security requirements while conducting everyday financial operations</li>
                     </ul>
                 </div>
             </div>
@@ -97,9 +100,11 @@
                     <p class="company-name">Dynamic Seats</p> <!-- Company name -->
                     <p class="duration">Duration: Summer 2021</p> <!-- Duration of the internship -->
                     <ul> <!-- List of tasks and responsibilities -->
-                        <li>Assisted in managing and analyzing data for seat booking systems.</li>
-                        <li>Worked on troubleshooting and design improvements.</li>
-                        <li>Contributed to enhancing the user experience of the booking platform.</li>
+                        <li>Assisted in the management and analysis of data for seat reservation systems, optimizing performance and functionality.</li>
+                        <br>
+                        <li>Collaborated on troubleshooting issues and implementing design improvements to enhance system efficiency.</li>
+                        <br>
+                        <li>Contributed to the enhancement of user experience by refining the interface and overall usability of the booking platform.</li>
                     </ul>
                 </div>
             </div>
@@ -114,9 +119,11 @@
                     <p class="company-name">Landscaping</p> <!-- Business name -->
                     <p class="duration">Duration: 2015-Present</p> <!-- Duration of the business -->
                     <ul> <!-- List of tasks and responsibilities -->
-                        <li>Managed landscaping projects and customer relations.</li>
-                        <li>Developed business strategy and client acquisition tactics.</li>
-                        <li>Oversaw budgeting and quality control for landscaping services.</li>
+                        <li>Managed landscaping projects and maintained client relationships, ensuring high standards of service delivery.</li>
+                        <br>
+                        <li>Developed and implemented business strategies and client acquisition tactics to drive growth.</li>
+                        <br>
+                        <li>Oversaw budgeting and quality control processes for landscaping services, ensuring cost-effectiveness and client satisfaction.</li>
                     </ul>
                 </div>
             </div>
