Fixed image/icon paths

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <!-- CBC Engineering Intern -->
             <div class="experience-item"> <!-- Experience item for CBC internship -->
                 <div class="experience-link" onclick="toggleExperience('cbc')"> <!-- Link that toggles the details for the CBC experience -->
-                    <img src="images/CBC.png" alt="CBC Logo" class="experience-logo cbc-logo"> <!-- CBC logo -->
+                    <img src="Images/CBC.png" alt="CBC Logo" class="experience-logo cbc-logo"> <!-- CBC logo -->
                 </div>
                 <div id="cbc" class="experience-details-text"> <!-- Hidden details about the CBC internship that can be toggled -->
                     <h3 class="position-name">Engineering Intern</h3> <!-- Position title -->
@@ -74,7 +74,7 @@
             <!-- Scotiabank Customer Experience Associate -->
             <div class="experience-item"> <!-- Experience item for Scotiabank -->
                 <div class="experience-link" onclick="toggleExperience('scotiabank')"> <!-- Link that toggles the details for the Scotiabank experience -->
-                    <img src="images/Scotiabank.webp" alt="Scotiabank Logo" class="experience-logo scotiabank-logo"> <!-- Scotiabank logo -->
+                    <img src="Images/Scotiabank.webp" alt="Scotiabank Logo" class="experience-logo scotiabank-logo"> <!-- Scotiabank logo -->
                 </div>
                 <div id="scotiabank" class="experience-details-text"> <!-- Hidden details about Scotiabank experience -->
                     <h3 class="position-name">Customer Experience Associate</h3> <!-- Position title -->
@@ -93,7 +93,7 @@
             <!-- Dynamic Seats System Analyst Intern -->
             <div class="experience-item"> <!-- Experience item for Dynamic Seats -->
                 <div class="experience-link" onclick="toggleExperience('dynamic-seats')"> <!-- Link that toggles the details for Dynamic Seats experience -->
-                    <img src="images/DynamicSeats.png" alt="Dynamic Seats" class="experience-logo dynamicseats"> <!-- Dynamic Seats logo -->
+                    <img src="Images/DynamicSeats.png" alt="Dynamic Seats" class="experience-logo dynamicseats"> <!-- Dynamic Seats logo -->
                 </div>
                 <div id="dynamic-seats" class="experience-details-text"> <!-- Hidden details about Dynamic Seats internship -->
                     <h3 class="position-name">System Analyst Intern</h3> <!-- Position title -->
@@ -112,7 +112,7 @@
             <!-- Landscaping Personal Business -->
             <div class="experience-item"> <!-- Experience item for Landscaping -->
                 <div class="experience-link" onclick="toggleExperience('landscaping')"> <!-- Link that toggles the details for Landscaping -->
-                    <img src="images/Landscaping.png" alt="Landscaping Logo" class="experience-logo landscaping-logo"> <!-- Landscaping logo -->
+                    <img src="Images/Landscaping.png" alt="Landscaping Logo" class="experience-logo landscaping-logo"> <!-- Landscaping logo -->
                 </div>
                 <div id="landscaping" class="experience-details-text"> <!-- Hidden details about Landscaping -->
                     <h3 class="position-name">Personal Business</h3> <!-- Position title -->
@@ -192,17 +192,17 @@
     <div class="contact-container">
         <!-- Gmail Contact Icon -->
         <a href="mailto:farazpaikar99@gmail.com" target="_blank" class="contact-item">
-            <img src="icons/Email.svg" alt="Gmail Icon" class="contact-icon"> <!-- Gmail icon -->
+            <img src="Icons/Email.svg" alt="Gmail Icon" class="contact-icon"> <!-- Gmail icon -->
         </a>
 
         <!-- LinkedIn Contact Icon -->
         <a href="https://www.linkedin.com/in/farazpaikar" target="_blank" class="contact-item">
-            <img src="icons/linkedin.svg" alt="LinkedIn Icon" class="contact-icon"> <!-- LinkedIn icon -->
+            <img src="Icons/linkedin.svg" alt="LinkedIn Icon" class="contact-icon"> <!-- LinkedIn icon -->
         </a>
 
         <!-- GitHub Contact Icon -->
         <a href="https://github.com/farazpaikar" target="_blank" class="contact-item">
-            <img src="icons/Github.svg" alt="GitHub Icon" class="contact-icon"> <!-- GitHub icon -->
+            <img src="Icons/Github.svg" alt="GitHub Icon" class="contact-icon"> <!-- GitHub icon -->
         </a>
     </div>
 </section>
