Adjusted the code for mobile devices using media query

--- a/index.html
+++ b/index.html
@@ -15,16 +15,25 @@
 
 <body>
     
-    <!-- Header section with navigation links -->
-    <header>
-        <div class="name" id="name-click">Faraz Paikar</div> <!-- Displays the name with an ID for interaction -->
-        <nav> <!-- Navigation menu for easy page navigation -->
-            <a href="#about">About</a> <!-- Link to the About section -->
-            <a href="#experience">Work</a> <!-- Link to the Experience section -->
-            <a href="#skills">Skills</a> <!-- Link to the Skills section -->
-            <a href="#contact">Contact</a> <!-- Link to the Contact section -->
-        </nav>
-    </header>
+<!-- Header section with navigation links -->
+<header>
+    <div class="name" id="name-click">Faraz Paikar</div>
+    <nav id="navbar">
+      <a href="#about">About</a>
+      <a href="#experience">Work</a>
+      <a href="#skills">Skills</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  
+    <!-- Move the hamburger button outside of the nav element -->
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </header>
+  
+
 
     <!-- Home section with personal introduction -->
     <section id="Home">
