Added Comments and formatted code

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="#contact">Contact</a>
     </nav>
   
-    <!-- Move the hamburger button outside of the nav element -->
+    <!-- Hamburger button for mobile view -->
     <div class="hamburger" id="hamburger">
       <span></span>
       <span></span>
@@ -67,7 +67,7 @@
                     <img src="Images/CBC.png" alt="CBC Logo" class="experience-logo cbc-logo"> <!-- CBC logo -->
                 </div>
                 <div id="cbc" class="experience-details-text"> <!-- Hidden details about the CBC internship that can be toggled -->
-                    <h3 class="position-name">Engineering Intern</h3> <!-- Position title -->
+                    <h3 class="position-name">Network Engineering Intern</h3> <!-- Position title -->
                     <p class="company-name">CBC</p> <!-- Company name -->
                     <p class="duration">Duration: 2024-2025</p> <!-- Duration of the internship -->
                     <ul> <!-- List of tasks and responsibilities -->
