--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="script.js" defer></script> <!-- Links to an external JavaScript file with deferred loading to improve performance -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://kit.fontawesome.com/a076d05399.js">
+    <link rel="stylesheet" href="style.css?v=1.1">
+
 
 
 </head>
