--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8"> <!-- Specifies the character encoding for the document as UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures the page is responsive on all devices by setting the viewport width -->
     <title>My Portfolio</title> <!-- Sets the title of the webpage that appears in the browser tab -->
-    <link rel="stylesheet" href="style.css"> <!-- Links to an external CSS file for styling the page -->
+    <link rel="stylesheet" href="stylessss.css"> <!-- Links to an external CSS file for styling the page -->
     <script src="script.js" defer></script> <!-- Links to an external JavaScript file with deferred loading to improve performance -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://kit.fontawesome.com/a076d05399.js">
-    <link rel="stylesheet" href="style.css?v=1.1">
-
+    
 
 
 </head>
