--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section id="about">
         <h2>About Me</h2>
         <p class="about">
-            Hi, I'm Faraz Paikar, a dedicated IT Networking and Security professional currently pursuing a degree in Networking & IT Security at Ontario Tech University. With a solid foundation in network infrastructure, security protocols, and programming technologies, I am passionate about leveraging my skills in technology and troubleshooting to solve complex challenges. My practical experience includes a wide range of technology with specialization in networking, programming and cybersecurity. I have previously contributed to IT operations and security roles at reputable organizations such as Scotiabank and CBC. Through these experiences, I have honed my ability to optimize systems for performance, stay ahead of emerging security trends, and provide innovative solutions in the ever-evolving tech landscape.
+            Hi, I'm Faraz Paikar, currently pursuing my Master's degree in Information Technology at Ontario Tech University. With a strong foundation in network infrastructure, security protocols, and programming technologies, I'm passionate about solving complex challenges through technology and troubleshooting. My practical experience spans a wide range of technology, specializing in networking, programming, and cybersecurity. I've contributed to IT operations and security roles at organizations such as Scotiabank and CBC, where I've refined my ability to optimize systems for performance, stay ahead of emerging security trends, and offer innovative solutions in the ever-evolving tech landscape.
         </p>
     </section>
     
@@ -115,7 +115,7 @@
                         <br>
                         <li>Collaborated on troubleshooting issues and implementing design improvements to enhance system efficiency.</li>
                         <br>
-                        <li>Contributed to the enhancement of user experience by refining the interface and overall usability of the booking platform.</li>
+                        <li>Provided customer support by assisting users with inquiries, troubleshooting issues, and ensuring a smooth experience with the booking platform.</li>
                     </ul>
                 </div>
             </div>
